--- a/views/index.html
+++ b/views/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="server.js"></script>
+    <script>
+        function show(shown, hidden) {
+            document.getElementById(shown).style.display = 'block';
+            document.getElementById(hidden).style.display = 'none';
+            return false;
+        }
+    </script>
     <title>Marvel</title>
 
 </head>
@@ -24,35 +31,17 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="home.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="login.html">Login</a>
+                    <a class="nav-link" href="#" onclick="return show('login', 'index');">Login</a>
                 </li>
-                <!--<li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Login
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Admin</a>
-                        <a class="dropdown-item" href="#">Fan</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Sign up</a>
-                    </div>
-                </li>-->
-                <!--<li class="nav-item">
-                    <a class="nav-link disabled" href="#">Disabled</a>
-                </li-->
             </ul>
-            <!--<form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>-->
         </div>
     </nav>
     <br />
 
-    <div class="container">
+    <div class="container" id="index">
         <div class="row">
             <div class="col">
                 <!--<img src="avengersall.jpg" class="img-fluid" alt="Avengers">-->
@@ -60,7 +49,7 @@
                 <p>For fans all over the north-west to meet at your local marvel events!</p>
                 <br />
                 <p>New to Marvelfanatic? Search below for an event you're interested in and then sign up to it using this link.</p>
-                <p><a href="signup.html">Sign up to an event here</a></p>
+                <a href="#" onclick="return show('signup', 'index');">Sign up to an event here</a>
                 <br />
             </div>
 
@@ -144,7 +133,145 @@
             </div>
         </div>
     </div>
+    <!--end of index page-->
+    <!--login page-->
+    <div class="container" id="login" style="display:none">
+        <div class="row justify-content-md-center">
+            <form id="loginform" action="http://127.0.0.1:8090">
+                <h1>Admin Login</h1>
+                <div class="form-group">
+                    <label for="exampleInputEmail1">Username</label>
+                    <input type="text" class="form-control" id="username" placeholder="Username">
+                    <!--<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>-->
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputPassword1">Password</label>
+                    <input type="password" class="form-control" id="password" placeholder="Password">
+                </div>
+                <div class="col-4"><button type="submit" class="btn btn-primary">Login</button></div>
+            </form>
+        </div>
+        <br />
+        <div id='result'></div>
+    </div>
+    <!--end of login page-->
+    <!--signup page-->
+    <div class="container" id="signup" style="display:none">
+        <form id="signupform" action="http://127.0.0.1:8090" method="post">
+            <div class="col-6"><h1>Sign up to events today!</h1></div>
+            <div class="form-group">
+                <div class="col-4">
+                    <label for="formGroupExampleInput">Enter a unique username:</label>
+                    <input type="text" class="username" id="username" placeholder="Username">
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-4">
+                    <label for="formGroupExampleInput">Enter your forename:</label>
+                    <input type="text" class="form-control" id="forename" placeholder="Forename">
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-4">
+                    <label for="formGroupExampleInput">Enter your surname:</label>
+                    <input type="text" class="form-control" id="surname" placeholder="Surname">
+                </div>
+            </div>
 
+            <div class="form-group">
+                <div class="col-4">
+                    <label for="exampleFormControlSelect1">Select event</label>
+                    <select class="form-control" id="event">
+                        <option>spiderman</option>
+                        <option>loki</option>
+
+                    </select>
+                </div>
+            </div>
+            <div class="col-4"><button type="submit" class="btn btn-primary">Submit!</button></div>
+        </form>
+        <br />
+        <div id='signupresult'></div>
+        <br />
+    </div>
+    <!--end of signup page-->
+    <!--admin page-->
+    <div class="container" id="admin" style="display:none">
+        <div class="row no-gutters">
+            <div class="col-7">
+                <!--add events-->
+                <form id="posteventform" action="http://127.0.0.1:8090" method="post">
+                    <div class="col-6"><h2>Add new event</h2></div>
+                    <div class="form-group">
+                        <div class="col-4">
+                            <label for="formGroupExampleInput">Enter an event code:</label>
+                            <input type="text" class="form-control" id="code" placeholder="Event code">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-4">
+                            <label for="formGroupExampleInput">Enter event full title:</label>
+                            <input type="text" class="form-control" id="name" placeholder="Event title">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-4">
+                            <label for="formGroupExampleInput">Enter event date:</label>
+                            <input type="text" class="form-control" id="date" placeholder="Event date">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-4">
+                            <label for="formGroupExampleInput">Enter event location:</label>
+                            <input type="text" class="form-control" id="location" placeholder="Event location">
+                        </div>
+                    </div>
+
+                    <div class="col-4"><button type="submit" class="btn btn-primary">Submit</button></div>
+                </form>
+                <br />
+                <div id='posteventresult'></div>
+                <br />
+            </div>
+
+            <div class="col">
+                <div class="row">
+                    <div class="col">
+                        <!--search people-->
+                        <h2>Search people</h2>
+                        <form id="searchform" action="http://127.0.0.1:8090" method="get">
+                            <div class="form-group">
+                                <div class="col-4">
+                                    <label for="formGroupExampleInput">Enter a username:</label>
+                                    <input type="text" class="form-control" id="username" placeholder="Username">
+                                </div>
+                            </div>
+                            <div class="col-4"><button type="submit" class="btn btn-primary">Submit</button></div>
+                        </form>
+                        <br />
+                        <div id='personresult'></div>
+                        <br />
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col">
+                        <!--list people-->
+                        <h2>List users</h2>
+                        <form id="listform" action="http://127.0.0.1:8090" method="get">
+                            <div class="col-4"><button type="submit" class="btn btn-primary">Submit</button></div>
+                        </form>
+                        <br />
+                        <div id='peopleresult'></div>
+                        <br />
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--end of admin page-->
+
+    <!--index scripts-->
     <script>
         function formhandler() {
             var code = $("#code").val();
@@ -185,6 +312,103 @@
 
         $('#alleventsform').on('submit', formhandler);
     </script>
+    <!--end of index scripts-->
+
+    <!--login scripts-->
+    <script>
+        function formhandler() {
+            var username = $("#username").val();
+            var password = $("#password").val();
+            $.get("http://127.0.0.1:8090/login",
+                {
+                    username: $("#username").val(),
+                    password: $("#password").val()
+                },
+                function (data) {
+                    if (data == "success") {
+                        //window.location.replace("admin.html");
+                        return show('admin', 'login');
+                    }
+                    else {
+                        $('#result').html(data);
+                    }
+
+                });
+            return false;
+
+        };
+        $('#loginform').on('submit', formhandler);
+    </script>
+    <!--end of login script-->
+
+    <!--signup script-->
+    <script>
+        function formhandler() {
+            var username = $("#username").val();
+            $.post("http://127.0.0.1:8090/newperson",
+                {
+                    username: $("#username").val(),
+                    forename: $("#forename").val(),
+                    surname: $("#surname").val(),
+                    event: $("#event").val()
+                },
+                function (data) {
+                    $('#signupresult').html(data);
+                });
+            return false;
+        };
+
+        $('#signupform').on('submit', formhandler);
+    </script>
+    <!--end of signup script-->
+
+    <!--admin scripts-->
+    <script>
+        function formhandler() {
+            var code = $("#code").val();
+            $.post("http://127.0.0.1:8090/newevent",
+                {
+                    code: $("#code").val(),
+                    name: $("#name").val(),
+                    date: $("#date").val(),
+                    location: $("#location").val()
+                },
+                function (data) {
+                    $('#posteventresult').html(data);
+                });
+            return false;
+        };
+
+        $('#posteventform').on('submit', formhandler);
+    </script>
+
+    <script>
+        function formhandler() {
+            var username = $("#username").val();
+            $.get("http://127.0.0.1:8090/person", "username=" + username,
+                function (data) {
+                    $('#personresult').html(data);
+                });
+            return false;
+
+        };
+
+        $('#searchform').on('submit', formhandler);
+    </script>
+
+    <script>
+        function formhandler() {
+            $.get("http://127.0.0.1:8090/allpeople",
+                function (data) {
+                    $('#peopleresult').html(data);
+                });
+            return false;
+
+        };
+
+        $('#listform').on('submit', formhandler);
+    </script>
+    <!--end admin scripts-->
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
