--- a/views/index.html
+++ b/views/index.html
@@ -31,17 +31,17 @@
         </button>
 
         <a class="navbar-brand" href="#">
-            <img src="avengers.jpg" width="30" height="30" class="d-inline-block align-top" alt="A4">
+            <img src="https://i.pinimg.com/originals/29/f5/b7/29f5b7e2e1f05c14508b8f1d4ee794ad.jpg" width="30" height="30" class="d-inline-block align-top" alt="A4">
             Marvelfanatic
         </a>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#" onclick="return show2('index', 'admin', 'signup', 'login');">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#" onclick="return show2('login', 'index', 'signup', 'index');">Login</a>
+                    <a class="nav-link" href="#" onclick="return show2('login', 'admin', 'signup', 'index');">Login</a>
                 </li>
             </ul>
         </div>
@@ -65,21 +65,21 @@
                 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img class="d-block w-100" src="spiderman.jpg" alt="First slide">
+                            <img class="d-block w-100" src="https://nerdist.com/wp-content/uploads/2017/06/tom-holland-1.jpg" alt="First slide">
                             <div class="carousel-caption d-block">
                                 <h3>Next event: 20/01/19</h3>
                                 <p>Screening of spider-verse</p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="loki.jpg" alt="Second slide">
+                            <img class="d-block w-100" src="https://img.fireden.net/v/image/1528/16/1528163849198.png" alt="Second slide">
                             <div class="carousel-caption d-block">
                                 <h3>Upcoming event</h3>
                                 <p>Premiere of new Loki series</p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="starlord.jpg" alt="Third slide">
+                            <img class="d-block w-100" src="https://vignette.wikia.nocookie.net/disney-marvel-gotg/images/5/5e/Guardians-of-the-Galaxy-Infinity-War.jpg/revision/latest?cb=20170328171624" alt="Third slide">
                             <div class="carousel-caption d-block">
                                 <h3>Upcoming event</h3>
                                 <p>Guardians of the Galaxy cosplay meetup</p>
@@ -103,7 +103,7 @@
                 <div class="col">
                     <h4>Search events by code or date</h4>
                     <!--search events-->
-                    <form id="eventform" action="http://127.0.0.1:8090" method="get">
+                    <form id="eventform" action="http://172.30.94.116" method="get">
                         <div class="form-group">
                             <div class="col-6">
                                 <label for="formGroupExampleInput">Enter an event code:</label>
@@ -113,7 +113,7 @@
                         <div class="col-4"><button type="submit" class="btn btn-primary">Submit</button></div>
                     </form>
                     <br />
-                    <form id="dateform" action="http://127.0.0.1:8090" method="get">
+                    <form id="dateform" action="http://172.30.94.116" method="get">
                         <div class="form-group">
                             <div class="col-6">
                                 <label for="formGroupExampleInput">Pick a date:</label>
@@ -130,7 +130,7 @@
                     <h4>List all events</h4>
                     <p>To see all available and upcoming events, click below</p>
                     <br />
-                    <form id="alleventsform" action="http://127.0.0.1:8090" method="get">
+                    <form id="alleventsform" action="http://172.30.94.116" method="get">
                         <div class="col-4"><button type="submit" class="btn btn-primary">Get events</button></div>
                     </form>
                     <br />
