--- a/views/index.html
+++ b/views/index.html
@@ -103,7 +103,7 @@
                 <div class="col">
                     <h4>Search events by code or date</h4>
                     <!--search events-->
-                    <form id="eventform" action="http://172.30.94.116:8080" method="get">
+                    <form id="eventform" action="http://nodejs-mongo-persistent-marvelfanatic.7e14.starter-us-west-2.openshiftapps.com:8080" method="get">
                         <div class="form-group">
                             <div class="col-6">
                                 <label for="formGroupExampleInput">Enter an event code:</label>
@@ -113,7 +113,7 @@
                         <div class="col-4"><button type="submit" class="btn btn-primary">Submit</button></div>
                     </form>
                     <br />
-                    <form id="dateform" action="http://172.30.94.116:8080" method="get">
+                    <form id="dateform" action="http://nodejs-mongo-persistent-marvelfanatic.7e14.starter-us-west-2.openshiftapps.com:8080" method="get">
                         <div class="form-group">
                             <div class="col-6">
                                 <label for="formGroupExampleInput">Pick a date:</label>
@@ -130,7 +130,7 @@
                     <h4>List all events</h4>
                     <p>To see all available and upcoming events, click below</p>
                     <br />
-                    <form id="alleventsform" action="http://172.30.94.116:8080" method="get">
+                    <form id="alleventsform" action="http://nodejs-mongo-persistent-marvelfanatic.7e14.starter-us-west-2.openshiftapps.com:8080" method="get">
                         <div class="col-4"><button type="submit" class="btn btn-primary">Get events</button></div>
                     </form>
                     <br />
