--- a/views/index.html
+++ b/views/index.html
@@ -144,7 +144,7 @@
     <!--login page-->
     <div class="container" id="login" style="display:none">
         <div class="row justify-content-md-center">
-            <form id="loginform" action="http://127.0.0.1:8090">
+            <form id="loginform" action="http://nodejs-mongo-persistent-marvelfanatic.7e14.starter-us-west-2.openshiftapps.com/">
                 <h1>Admin Login</h1>
                 <div class="form-group">
                     <label for="exampleInputEmail1">Username</label>
@@ -164,7 +164,7 @@
     <!--end of login page-->
     <!--signup page-->
     <div class="container" id="signup" style="display:none">
-        <form id="signupform" action="http://127.0.0.1:8090" method="post">
+        <form id="signupform" action="http://nodejs-mongo-persistent-marvelfanatic.7e14.starter-us-west-2.openshiftapps.com/" method="post">
             <div class="col-6"><h1>Sign up to events today!</h1></div>
             <div class="form-group">
                 <div class="col-4">
@@ -207,7 +207,7 @@
         <div class="row no-gutters">
             <div class="col-7">
                 <!--add events-->
-                <form id="posteventform" action="http://127.0.0.1:8090" method="post">
+                <form id="posteventform" action="http://nodejs-mongo-persistent-marvelfanatic.7e14.starter-us-west-2.openshiftapps.com/" method="post">
                     <div class="col-6"><h2>Add new event</h2></div>
                     <div class="form-group">
                         <div class="col-4">
@@ -246,7 +246,7 @@
                     <div class="col">
                         <!--search people-->
                         <h2>Search people</h2>
-                        <form id="searchform" action="http://127.0.0.1:8090" method="get">
+                        <form id="searchform" action="http://nodejs-mongo-persistent-marvelfanatic.7e14.starter-us-west-2.openshiftapps.com/" method="get">
                             <div class="form-group">
                                 <div class="col-4">
                                     <label for="formGroupExampleInput">Enter a username:</label>
@@ -265,7 +265,7 @@
                     <div class="col">
                         <!--list people-->
                         <h2>List users</h2>
-                        <form id="listform" action="http://127.0.0.1:8090" method="get">
+                        <form id="listform" action="http://nodejs-mongo-persistent-marvelfanatic.7e14.starter-us-west-2.openshiftapps.com/" method="get">
                             <div class="col-4"><button type="submit" class="btn btn-primary">Submit</button></div>
                         </form>
                         <br />
@@ -326,7 +326,7 @@
         function formhandler() {
             var username = $("#username").val();
             var password = $("#password").val();
-            $.get("http://127.0.0.1:8090/login",
+            $.get("http://nodejs-mongo-persistent-marvelfanatic.7e14.starter-us-west-2.openshiftapps.com/login",
                 {
                     username: $("#username").val(),
                     password: $("#password").val()
@@ -352,7 +352,7 @@
     <script>
         function formhandler() {
             var username = $("#username").val();
-            $.post("http://127.0.0.1:8090/newperson",
+            $.post("http://nodejs-mongo-persistent-marvelfanatic.7e14.starter-us-west-2.openshiftapps.com/newperson",
                 {
                     username: $("#username").val(),
                     forename: $("#forename").val(),
@@ -373,7 +373,7 @@
     <script>
         function formhandler() {
             var code = $("#code").val();
-            $.post("http://127.0.0.1:8090/newevent",
+            $.post("http://nodejs-mongo-persistent-marvelfanatic.7e14.starter-us-west-2.openshiftapps.com/newevent",
                 {
                     code: $("#code").val(),
                     name: $("#name").val(),
@@ -392,7 +392,7 @@
     <script>
         function formhandler() {
             var username = $("#username").val();
-            $.get("http://127.0.0.1:8090/person", "username=" + username,
+            $.get("http://nodejs-mongo-persistent-marvelfanatic.7e14.starter-us-west-2.openshiftapps.com/person", "username=" + username,
                 function (data) {
                     $('#personresult').html(data);
                 });
@@ -405,7 +405,7 @@
 
     <script>
         function formhandler() {
-            $.get("http://127.0.0.1:8090/allpeople",
+            $.get("http://nodejs-mongo-persistent-marvelfanatic.7e14.starter-us-west-2.openshiftapps.com/allpeople",
                 function (data) {
                     $('#peopleresult').html(data);
                 });
