--- a/views/index.html
+++ b/views/index.html
@@ -169,7 +169,7 @@
             <div class="form-group">
                 <div class="col-4">
                     <label for="formGroupExampleInput">Enter a unique username:</label>
-                    <input type="text" class="username" id="u" placeholder="Username">
+                    <input type="text" class="form-control" id="u" placeholder="Username">
                 </div>
             </div>
             <div class="form-group">
